Generation working with List<String>